# selim

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.db_selim/postgres/base/1/: pg_internal.init
.db_selim/postgres/base/5/: pg_internal.init
.db_selim/postgres/global/: 1260  pg_control  pg_internal.init
.db_selim/postgres/pg_stat/: pgstat.stat
config/: settings.py  urls.py
news/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py
other/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
other/migrations/: 0001_initial.py  0002_rename_end_time_schedule_end_work.py
products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
tests/news/: test_news.py
tests/other/: test_other.py
tests/products/: factories.py  test_categories.py  test_feedback.py  test_products.py
