[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
pillow = "^10.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[tool.poetry.group.linters.dependencies]
mypy = "^1.8.0"
django-stubs = "^4.2.7"
types-requests = "^2.31.0.20240125"
types-python-dateutil = "^2.8.19.20240106"
types-pytz = "^2023.4.0.20240130"
types-six = "^1.16.21.20240106"
black = "^24.1.1"
isort = "^5.13.2"
ruff = "^0.1.15"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
